{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 26,
  "lineage": "8bcb5c99-6af9-6de0-ce9c-8ffd78786d3b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-049c9c93d9fd5e12e",
            "owner_id": "759307837889",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "vpc_id": "vpc-05bf2a49e1efaeba6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd4f780e25ca911d",
            "route_table_id": "rtb-049c9c93d9fd5e12e",
            "subnet_id": "subnet-08ee223421cd405b6"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_0",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac0d54f5d874e5d5",
            "route_table_id": "rtb-049c9c93d9fd5e12e",
            "subnet_id": "subnet-0dab5cc3adf0e68c6"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b920f3e5f1420a8",
            "route_table_id": "rtb-049c9c93d9fd5e12e",
            "subnet_id": "subnet-0c27f99bb2820d314"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "base-endpoints",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:759307837889:security-group/sg-09969332dbd2e8212",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09969332dbd2e8212",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.20.1.0/24",
                  "10.20.2.0/24",
                  "10.20.3.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpc-endpoint-ec2",
            "name_prefix": null,
            "owner_id": "759307837889",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-05bf2a49e1efaeba6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "base-endpoints-443",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.20.1.0/24",
              "10.20.2.0/24",
              "10.20.3.0/24"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-3350099988",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09969332dbd2e8212",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.base-endpoints",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:759307837889:subnet/subnet-08ee223421cd405b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.20.1.0/24",
            "id": "subnet-08ee223421cd405b6",
            "map_public_ip_on_launch": false,
            "owner_id": "759307837889",
            "tags": {
              "kubernetes.io/cluster/main": "shared"
            },
            "vpc_id": "vpc-05bf2a49e1efaeba6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:759307837889:subnet/subnet-0dab5cc3adf0e68c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.20.2.0/24",
            "id": "subnet-0dab5cc3adf0e68c6",
            "map_public_ip_on_launch": false,
            "owner_id": "759307837889",
            "tags": {
              "kubernetes.io/cluster/main": "shared"
            },
            "vpc_id": "vpc-05bf2a49e1efaeba6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:759307837889:subnet/subnet-0c27f99bb2820d314",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.20.3.0/24",
            "id": "subnet-0c27f99bb2820d314",
            "map_public_ip_on_launch": false,
            "owner_id": "759307837889",
            "tags": {
              "kubernetes.io/cluster/main": "shared"
            },
            "vpc_id": "vpc-05bf2a49e1efaeba6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:759307837889:vpc/vpc-05bf2a49e1efaeba6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0a8461a6c6be7e344",
            "default_route_table_id": "rtb-0198b54b9d419165d",
            "default_security_group_id": "sg-0b0ab5ce3b0bbf664",
            "dhcp_options_id": "dopt-104ea37a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05bf2a49e1efaeba6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0198b54b9d419165d",
            "owner_id": "759307837889",
            "tags": {
              "kubernetes.io/cluster/main": "shared"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_entry": [
              {
                "dns_name": "vpce-012a2221a6b2b5c92-jb4gwwqh.ec2.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-012a2221a6b2b5c92-jb4gwwqh-eu-central-1b.ec2.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-012a2221a6b2b5c92-jb4gwwqh-eu-central-1c.ec2.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-012a2221a6b2b5c92-jb4gwwqh-eu-central-1a.ec2.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ec2.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z0570201388ZR5HMRDLZK"
              }
            ],
            "id": "vpce-012a2221a6b2b5c92",
            "network_interface_ids": [
              "eni-06cc2f5943c5c2891",
              "eni-07f485970390efc6a",
              "eni-0866592d76dd5604e"
            ],
            "owner_id": "759307837889",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-09969332dbd2e8212"
            ],
            "service_name": "com.amazonaws.eu-central-1.ec2",
            "state": "available",
            "subnet_ids": [
              "subnet-08ee223421cd405b6",
              "subnet-0c27f99bb2820d314",
              "subnet-0dab5cc3adf0e68c6"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05bf2a49e1efaeba6"
          },
          "dependencies": [
            "aws_security_group.base-endpoints",
            "aws_subnet.private_0",
            "aws_subnet.private_1",
            "aws_subnet.private_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr-api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_entry": [
              {
                "dns_name": "vpce-072e4dc15049cf657-mtql674l.api.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-072e4dc15049cf657-mtql674l-eu-central-1b.api.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-072e4dc15049cf657-mtql674l-eu-central-1c.api.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-072e4dc15049cf657-mtql674l-eu-central-1a.api.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "api.ecr.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z05702003AGTZ57C8HC52"
              }
            ],
            "id": "vpce-072e4dc15049cf657",
            "network_interface_ids": [
              "eni-066b6a3f07cb4d009",
              "eni-077929ca5eb7c2a55",
              "eni-0bfd014324911bf4e"
            ],
            "owner_id": "759307837889",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-09969332dbd2e8212"
            ],
            "service_name": "com.amazonaws.eu-central-1.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-08ee223421cd405b6",
              "subnet-0c27f99bb2820d314",
              "subnet-0dab5cc3adf0e68c6"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05bf2a49e1efaeba6"
          },
          "dependencies": [
            "aws_security_group.base-endpoints",
            "aws_subnet.private_0",
            "aws_subnet.private_1",
            "aws_subnet.private_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr-dkr",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_entry": [
              {
                "dns_name": "vpce-0aaf62e0d70feea8f-8qzpf7hw.dkr.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0aaf62e0d70feea8f-8qzpf7hw-eu-central-1b.dkr.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0aaf62e0d70feea8f-8qzpf7hw-eu-central-1c.dkr.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0aaf62e0d70feea8f-8qzpf7hw-eu-central-1a.dkr.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "dkr.ecr.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z054280612I26M7KVCQA2"
              },
              {
                "dns_name": "*.dkr.ecr.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z054280612I26M7KVCQA2"
              }
            ],
            "id": "vpce-0aaf62e0d70feea8f",
            "network_interface_ids": [
              "eni-0734e5e1ccab2e0df",
              "eni-0b7730997ea2bd3dc",
              "eni-0d38da9cd92f3443a"
            ],
            "owner_id": "759307837889",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-09969332dbd2e8212"
            ],
            "service_name": "com.amazonaws.eu-central-1.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-08ee223421cd405b6",
              "subnet-0c27f99bb2820d314",
              "subnet-0dab5cc3adf0e68c6"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05bf2a49e1efaeba6"
          },
          "dependencies": [
            "aws_security_group.base-endpoints",
            "aws_subnet.private_0",
            "aws_subnet.private_1",
            "aws_subnet.private_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_blocks": [
              "52.219.44.0/22",
              "54.231.192.0/20",
              "52.219.72.0/22"
            ],
            "id": "vpce-0d7bb6f0bc1af48d6",
            "owner_id": "759307837889",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ea54007",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-049c9c93d9fd5e12e"
            ],
            "service_name": "com.amazonaws.eu-central-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-05bf2a49e1efaeba6"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}